test/libsolidity/syntaxTests/uncheckedArray/uncheckedArray_while_body.sol
contract C {
    function f() public pure {
        while (true) uncheckedArray {

        }
    }
}
// ----
// ParserError 5297: (65-74): "uncheckedArray" blocks can only be used inside regular blocks.
